test/fail/vardeclinit-inferred-type-global.app
//Global variable a has illegal type.
application test

  var a := Rfgjdfgdklfgjelrkjglke{}; //shouldn't break rename phase

  function do() {
    
  }
